[package]
name = "basic-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = "1.5.8"  
aws-sdk-dynamodb = "0.24.0" 
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.1", features = ["v4"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] } # Enable serde for chrono
