[package]
name = "cherubgyre"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cherubgyre"
path = "src/main.rs"

[build]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]

[dependencies]
lambda_runtime = "0.13" # Lightweight AWS Lambda runtime
actix-web = { version = "4.0", default-features = false, features = ["macros"] } # Disable unused features
serde = { version = "1.0", features = ["derive"] } # Keep only "derive"
serde_json = "1.0"
aws-config = "1.5.12"
aws-sdk-dynamodb = { version = "1.57.0", default-features = false } # Disable unused AWS SDK features
dotenv = "0.15"
aws-types = "1.3.3"
tokio = { version = "1", features = ["rt-multi-thread", "time"] } # Keep only required features
tracing = { version = "0.1", default-features = false } # Disable default features
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] } # Use only essential features
uuid = { version = "1.11", features = ["v4"] }
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] } # Enable serde for chrono

[dependencies.aws_lambda_events]
version = "0.16"
features = ["apigw"] # Keep only the necessary feature for API Gateway integration

[profile.dev]
# Enable incremental compilation for faster builds during development
incremental = true

[profile.release]
# Thin LTO for faster linking in release builds
lto = "thin"
codegen-units = 256 # lower to 1 when in production, this is a dev value for fast compile times
opt-level = "s" # binary size isn't critical, so we optimize for speed
